[gd_scene load_steps=13 format=3 uid="uid://dg4g54fl1mbyo"]

[ext_resource type="PackedScene" uid="uid://c5ytv63w64aps" path="res://designer_src/object_metadata.tscn" id="1_0tab8"]
[ext_resource type="Script" path="res://game_objects/physics/objects/star_counter.gd" id="1_innc7"]
[ext_resource type="Texture2D" uid="uid://b4lq4c21il5yl" path="res://game_objects/physics/assets/objects/starGold.png" id="1_nm11t"]
[ext_resource type="FontFile" uid="uid://8flxsv3oaan4" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="2_npfmo"]
[ext_resource type="PackedScene" uid="uid://b04xmainp6ixm" path="res://designer_src/object_functionality.tscn" id="2_w538q"]
[ext_resource type="PackedScene" uid="uid://c541h1l1hdn14" path="res://coder_nodes/object_coder.tscn" id="3_bb6n3"]
[ext_resource type="Script" path="res://designer_src/object_custom_property.gd" id="5_7xugw"]
[ext_resource type="Script" path="res://addons/rect_extents_2D/RectExtents2D.gd" id="6_0b0ih"]
[ext_resource type="Script" path="res://coder_src/object_code_function.gd" id="6_t0fab"]

[sub_resource type="Resource" id="Resource_um1rs"]
script = ExtResource("5_7xugw")
property_name = "num_stars"
property_type = 1
property_value = "0"
property_default_value = ""
property_read_only = false

[sub_resource type="Resource" id="Resource_ngw07"]
script = ExtResource("6_t0fab")
function_name = "set_num_stars"
function_block_parameters = Array[ExtResource("5_7xugw")]([SubResource("Resource_um1rs")])
function_outputs = Array[String]([])

[sub_resource type="Resource" id="Resource_ho67p"]
script = ExtResource("5_7xugw")
property_name = "num_stars"
property_type = 1
property_value = "0"
property_default_value = ""
property_read_only = false

[node name="StarCounter" type="HBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme_override_constants/separation = 10
script = ExtResource("1_innc7")

[node name="ObjectMetaData" parent="." instance=ExtResource("1_0tab8")]
node_kind = 3
is_static_placement = true

[node name="ObjectFunctionality" parent="." instance=ExtResource("2_w538q")]

[node name="ObjectCoder" parent="." instance=ExtResource("3_bb6n3")]
code_functions = Array[ExtResource("6_t0fab")]([SubResource("Resource_ngw07")])
code_variables = Array[ExtResource("5_7xugw")]([SubResource("Resource_ho67p")])

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_nm11t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="NumStarsCount" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_npfmo")
theme_override_font_sizes/font_size = 22
text = "0"

[node name="RectExtents2D" type="Node2D" parent="."]
position = Vector2(60, 36)
script = ExtResource("6_0b0ih")
size = Vector2(128, 64)

[connection signal="broadcast" from="ObjectCoder" to="." method="_on_object_coder_broadcast"]
