extends HBoxContainer

@onready var object_metadata: ObjectMetaData = $ObjectMetaData
@onready var object_functionality: ObjectFunctionality = $ObjectFunctionality
@onready var object_coder: ObjectCoder = $ObjectCoder


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
